--- a/extra/34-intro-and-loading-progress/package.json
+++ b/extra/34-intro-and-loading-progress/package.json
@@ -11,7 +11,9 @@
     "vite": "^4.0.4"
   },
   "dependencies": {
+    "gsap": "^3.5.1",
     "lil-gui": "^0.17.0",
+    "save": "^2.9.0",
     "three": "^0.148.0"
   }
 }
