--- a/react three fiber/42-first-r3f-application/package.json
+++ b/react three fiber/42-first-r3f-application/package.json
@@ -12,7 +12,9 @@
     "vite": "^4.0.4"
   },
   "dependencies": {
+    "@react-three/fiber": "8.9",
     "react": "18.2",
-    "react-dom": "18.2"
+    "react-dom": "18.2",
+    "three": "^0.148.0"
   }
 }
