--- a/react three fiber/43-r3f-drei/package.json
+++ b/react three fiber/43-r3f-drei/package.json
@@ -12,9 +12,10 @@
     "vite": "^4.0.4"
   },
   "dependencies": {
+    "@react-three/drei": "9.50",
+    "@react-three/fiber": "^8.9.2",
     "react": "18.2",
     "react-dom": "18.2",
-    "@react-three/fiber": "^8.9.2",
     "three": "^0.148.0"
   }
 }
