--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "leva": "^0.9.34",
     "lil-gui": "^0.17.0",
     "vercel": "^28.14.1"
+  },
+  "devDependencies": {
+    "r3f-perf": "^7.1.2"
   }
 }
