--- a/react three fiber/50-post-processing-with-r3f/package.json
+++ b/react three fiber/50-post-processing-with-r3f/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@react-three/drei": "^9.50.3",
     "@react-three/fiber": "^8.9.2",
+    "@react-three/postprocessing": "2.7",
+    "postprocessing": "6.29",
     "r3f-perf": "^6.6.3",
     "react": "18.2",
     "react-dom": "18.2",
